unpackaged/main/default/objects/Contact/fields/Demo_pipelines__c.field-meta.xml
<CustomField>
    <fullName>Demo_pipelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo-pipelines</label>
    <type>Checkbox</type>
</CustomField>