unpackaged/main/default/objects/Contact/fields/george_test__c.field-meta.xml
<CustomField>
    <fullName>george_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>george-test</label>
    <type>Checkbox</type>
</CustomField>