unpackaged/main/default/objects/Contact/fields/hotfix__c.field-meta.xml
<CustomField>
    <fullName>hotfix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hotfix</label>
    <type>Checkbox</type>
</CustomField>