unpackaged/main/default/objects/Contact/fields/smint__c.field-meta.xml
<CustomField>
    <fullName>smint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>smint</label>
    <type>Checkbox</type>
</CustomField>