unpackaged/main/default/objects/Contact/fields/thirdtimelucky__c.field-meta.xml
<CustomField>
    <fullName>thirdtimelucky__c</fullName>
    <defaultValue>false</defaultValue>
    <label>thirdtimelucky</label>
    <type>Checkbox</type>
</CustomField>